[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player/Player Base.gd" type="Script" id=1]
[ext_resource path="res://Player/Assets/Rogue.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Attack Area/Area:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:isHurt")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:isAttacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 20.0

[sub_resource type="CircleShape2D" id=6]
radius = 100.0

[node name="Player Base" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
isAttacking = false
isHurt = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "New Anim"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Hurt = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Attack Area" type="Area2D" parent="Position2D"]
collision_layer = 2
collision_mask = 4

[node name="Area" type="CollisionShape2D" parent="Position2D/Attack Area"]
shape = SubResource( 5 )
disabled = true

[node name="Attack Region" type="Area2D" parent="Position2D"]
collision_layer = 2
collision_mask = 4

[node name="Area" type="CollisionShape2D" parent="Position2D/Attack Region"]
shape = SubResource( 6 )

[node name="Weapon" type="Node2D" parent="Position2D"]
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Position2D/Attack Area" to="." method="_on_Attack_Area_body_entered"]
[connection signal="body_entered" from="Position2D/Attack Region" to="." method="_on_Attack_Region_body_entered"]
[connection signal="body_exited" from="Position2D/Attack Region" to="." method="_on_Attack_Region_body_exited"]
